@@ -1,3 +1,8 @@
+2005-03-01 hugo303
+
+	* src/check_run.c, tests/check_check_master.c: Changed timeout
+	error message according to sourceforge feature request #1121452.
+
 2005-02-28 hugo303
 
 	* debian/files: Removed this auto generated file.
